--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 volumes:
-  portainer_data: {}
+  data: {}
 
 services:
   portainer:
@@ -9,7 +9,7 @@ services:
     image: portainer/portainer-ce
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - portainer_data:/data
+      - data:/data
     ports:
       - "9443:9443"
     restart: unless-stopped
